--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <hr/>
     <h2><ol start="1"><li>Education</li></ol></h2>
     <ul>
-        <li>B.Tech CSE - VIT Vellore: 9.22 cgpa</li>
-        <li>12th(ICSE) - City Montessory School, Lucknow: 97%</li>
+        <li>B.Tech CSE - VIT Vellore: 9.22 CGPA</li>
+        <li>12th(ICSE) - City Montessori School, Lucknow: 97%</li>
         <li>10th(ICSE) - La Martiniere College, Lucknow: 93%</li>
     </ul>
     <hr/>
@@ -30,7 +30,7 @@
     <hr/>
     <h2><ol start="3"><li>Work Experience</li></ol></h2>
     <ul>
-        <li>Currently no work experience. Looking For intership in Web development</li>
+        <li>Currently no work experience. Looking For internship in Web development</li>
     </ul>
     <hr/>
     <h2><ol start="4"><li>Projects</li></ol></h2>
