--- a/public/contact.html
+++ b/public/contact.html
@@ -1,8 +1,8 @@
 <h1><u>Contact Me</u></h1>
-<p>Tel: +91 6393681370</p>
-<p>Email: dhruv.dd.dubey@gmail.com</p>
-<p>Address:<br/>
+<h3>Tel: +91 6393681370</h3>
+<h3>Email: dhruv.dd.dubey@gmail.com</h3>
+<h3><p>Address:
   B-1/502, Eldeco Elegance, Vibhuti Khand<br />
   Gomti Nagar, Lucknow<br />
   Uttar Pradesh, India<br />
-</p>
+</p></h3>
