--- a/public/contact.html
+++ b/public/contact.html
@@ -2,7 +2,7 @@
 <h3>Tel: +91 6393681370</h3>
 <h3>Email: dhruv.dd.dubey@gmail.com</h3>
 <h3><p>Address:
-  B-1/502, Eldeco Elegance, Vibhuti Khand<br />
-  Gomti Nagar, Lucknow<br />
+  B-1/502, Eldeco Elegance, Vibhuti Khand,<br />
+  Gomti Nagar, Lucknow-226010<br />
   Uttar Pradesh, India<br />
 </p></h3>
